--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,10 +47,11 @@ jobs:
     
     - name: Install conda dependencies
       run: |
+        echo conda --version
         conda update conda
         conda config --add channels bioconda
         conda install bedtools
-        conda install blast
+        conda install -c bioconda blast
         conda update blast
         conda install bowtie
         conda install bowtie2
