--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       max-parallel: 12
       matrix:
         os: [ubuntu-latest] #, macos-latest, windows-latest
-        python-version: ["3.10"] #"3.7", "3.8", "3.9", , "3.11"
+        python-version: ["3.9"] #"3.7", "3.8", "3.10", , "3.11"
         
     steps:
     - name: Checkout Repository 
@@ -44,10 +44,14 @@ jobs:
         update-conda: true
         python-version: ${{ matrix.python-version }}
         conda-channels: anaconda, conda-forge, bioconda
+        
+    - name: Conda version
+      run: |
+        echo conda --version
+        conda --version
     
     - name: Install conda dependencies
       run: |
-        echo conda --version
         conda update conda
         conda config --add channels bioconda
         conda install bedtools
