--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,8 +55,7 @@ jobs:
         conda update conda
         conda config --add channels bioconda
         conda install bedtools
-        conda install bioconda blast
-        conda update blast
+        conda install blast
         conda install bowtie
         conda install bowtie2
         
