--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,9 +55,9 @@ jobs:
       run: |
         conda config --add channels bioconda
         conda install bedtools
-        conda install blast
-        conda install bowtie
-        conda install bowtie2
+        conda install "blast>=2.12"
+        conda install "bowtie>=1.3"
+        conda install "bowtie2>=2.5"
         
     - name: Install pip dependencies
       run: |
