--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,10 +53,10 @@ jobs:
     - name: Install conda dependencies
       run: |
         conda config --add channels bioconda
-        conda install bedtools
-        conda install "blast>=2.12"
-        conda install bowtie2
-        conda install bowtie
+        conda install "blast=2.12.0"
+        conda install "bedtools=2.30.0"
+        conda install "bowtie=1.3.1"
+        conda install "bowtie2=2.5.0"
         
     - name: Install pip dependencies
       run: |
