--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         #$CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
+        conda config --add channels bioconda
         
     - name: Setup Conda for Windows
       if: matrix.os == 'windows-latest'
@@ -49,10 +50,10 @@ jobs:
       run: |
         conda update -n base -c defaults conda
         conda --version
+        conda config --show channels
     
     - name: Install conda dependencies
       run: |
-        conda config --add channels bioconda
         conda install "blast=2.12.0"
         conda install "bedtools=2.30.0"
         conda install "bowtie=1.3.1"
