--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
         #$CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
         conda config --add channels bioconda
+        conda config --add channels conda-forge
         
     - name: Setup Conda for Windows
       if: matrix.os == 'windows-latest'
