--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ maintainers = [
 description = "Develop custom oligo design pipelines."
 keywords = ["bioinformatics", "probes", "oligo nucleotides", "probe design", "oligo design"]
 readme = "README.md"
-requires-python = ">=3.9, <3.10"
+requires-python = "==3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
