--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [macos-11.7] #, ubuntu-latest, windows-latest
+        os: [macos-latest] #, ubuntu-latest, windows-latest
         python-version: ["3.10"] #"3.7", "3.8", "3.10", , "3.11"
         
     steps:
