--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         update-conda: true
         python-version: ${{ matrix.python-version }}
-        conda-channels: anaconda, conda-forge, bioconda
+        conda-channels: anaconda, bioconda, conda-forge
         
     - name: Conda version
       run: |
