--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [macos-latest] #, ubuntu-latest, windows-latest
-        python-version: ["3.10"] #"3.7", "3.8", "3.10", , "3.11"
+        os: [macos-latest, ubuntu-latest] #, ubuntu-latest, windows-latest
+        python-version: ["3.9, 3.10"] #"3.7", "3.8", "3.10", , "3.11"
         
     steps:
     - name: Checkout Repository 
