--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       max-parallel: 12
       matrix:
         os: [macos-latest, ubuntu-latest] #, ubuntu-latest, windows-latest
-        python-version: ["3.9, 3.10"] #"3.7", "3.8", "3.10", , "3.11"
+        python-version: ["3.9", "3.10"] #"3.7", "3.8", "3.10", , "3.11"
         
     steps:
     - name: Checkout Repository 
