--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,10 +55,10 @@ jobs:
     
     - name: Install conda dependencies
       run: |
-        conda install "blast>=2.12.0"
-        conda install "bedtools>=2.30.0"
-        conda install "bowtie>=1.3.1"
-        conda install "bowtie2>=2.5.0"
+        conda install blast
+        conda install bedtools
+        conda install bowtie2
+        conda install bowtie
         
     - name: Install pip dependencies
       run: |
