--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,7 @@ jobs:
     
     - name: Install conda dependencies
       run: |
+        conda install -c anaconda libgcc-ng
         conda install "blast>=2.12"
         conda install "bedtools>=2.30"
         conda install bowtie2
