--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,8 +36,6 @@ jobs:
       run: |
         #$CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-        conda config --add channels bioconda
-        conda config --add channels conda-forge
         
     - name: Setup Conda for Windows
       if: matrix.os == 'windows-latest'
@@ -47,24 +45,24 @@ jobs:
         python-version: ${{ matrix.python-version }}
         conda-channels: anaconda, bioconda, conda-forge
         
-    - name: Conda version
+    - name: Update conda and add channels
       run: |
+        conda config --add channels bioconda
+        conda config --add channels conda-forge
         conda update -n base -c defaults conda
+        conda update --all
+        
+    - name: Conda Configs
+      run: |
         conda --version
         conda config --show channels
-    
-    - name: Install libgcc for ubuntu
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        #conda install -c anaconda libgcc-ng
-        conda update --all
         
     - name: Install conda dependencies  
       run: |  
-        conda install "blast>=2.12"
-        conda install "bedtools>=2.30"
-        conda install bowtie2
-        conda install bowtie
+        conda install "blast>=1.12"
+        conda install "bedtools>=2.3"
+        conda install "bowtie2>=2.5"
+        conda install "bowtie>=1.3"
         
     - name: Install pip dependencies
       run: |
