--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         conda config --add channels bioconda
         conda config --add channels conda-forge
-        conda update -n base -c defaults conda
+        conda update conda
         conda update --all
         
     - name: Conda Configs
@@ -71,4 +71,4 @@ jobs:
         pip install -e .
     
     - name: Test with pytest
-      run: pytest tests_property_filters.py
+      run: pytest test_property_filters.py
