--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,10 +6,10 @@ on:
   workflow_dispatch:
     
 jobs:
-   test:
-     uses: HelmholtzAI-Consultants-Munich/oligo-designer-toolsuite/.github/workflows/test.yml@dev
+   #test:
+   #  uses: HelmholtzAI-Consultants-Munich/oligo-designer-toolsuite/.github/workflows/test.yml@dev
    publish:
-    needs: test
+    #needs: test
     name: Publish to PyPI
     runs-on: ubuntu-latest
     strategy:
