--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["oligo_designer_toolsuite"]
+use_scm_version = true
 
 [tool.setuptools.dynamic]
 #version = {attr = "my_package.VERSION"}
