--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
-#[tool.setuptools_scm]
+[tool.setuptools_scm]
 #write_to = "oligo_designer_toolsuite/_version.py"
 use_scm_version = true
 
