--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install build
           pip install twine
+          pip install setuptools-scm
       - name: Build package
         run: python -m build
       - name: Upload to PyPI
