--- a/tutorials/configs/padlock_probe_designer_custom.yaml
+++ b/tutorials/configs/padlock_probe_designer_custom.yaml
@@ -7,7 +7,8 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 
 ### Parameters for genomic region generation
-source: NCBI # required: indicate that own annotation should be used
+source: custom # required: indicate that own annotation should be used
+files_source: NCBI # original source of the genomic files
 annotation_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
 sequence_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
 species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
