--- a/tutorials/configs/padlock_probe_designer_custom.yaml
+++ b/tutorials/configs/padlock_probe_designer_custom.yaml
@@ -6,11 +6,11 @@ write_removed_genes: True # write in a file the removed genes
 write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
 
 
-### Parameters for genomic region generation
+### Parameters for genomic region generator that creates fasta file
 source: custom # required: indicate that own annotation should be used
-files_source: NCBI # original source of the genomic files
-annotation_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-sequence_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
+file_annotation: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
+file_sequence: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
+files_source: NCBI # optional: original source of the genomic files
 species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
 annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
 genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
@@ -94,7 +94,7 @@ Tm_parameters:
         Tris: 0 #[mM]
         Mg: 0 #[mM]
 
-Tm_correction_parameters:
+Tm_chem_correction_param:
     shared:
         DMSO: 0
         DMSOfactor: 0.75
