--- a/tutorials/configs/merfish_probe_designer_test.yaml
+++ b/tutorials/configs/merfish_probe_designer_test.yaml
@@ -9,8 +9,8 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 ### Parameters for genome and gene annotation
 source: custom # required: indicate that own annotation should be used
-annotation_file: ./tutorials/data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-sequence_file: ./tutorials/data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
+annotation_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
+sequence_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
 species: human # optional: species of provided annotation, leave empty if unknown
 annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
 genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
@@ -22,7 +22,7 @@ use_default_readouts: True # use the default readout sequences from the merfish 
 
 
 ### Parameters for oligo sequences generation
-file_genes: ./tutorials/data/genes/custom_10.txt # file with a list the genes used to generate the oligos  sequences, set as None if all the genes are used
+file_genes: ./data/genes/custom_10.txt # file with a list the genes used to generate the oligos  sequences, set as None if all the genes are used
 oligo_length_min: 30 #min length of oligos
 oligo_length_max: 30 #max length of oligos
 block_size: 50
@@ -73,6 +73,7 @@ targets_setup:
 
 coverage: 50 #minimum coverage between oligos and target sequence, ranging from 0 to 100% (full coverage) #not specified
 percent_identity: 80 #maximum similarity between oligos and target sequences, ranging from 0 to 100% (no missmatch)  #not specified
+strand: plus # strand of the query sequence to search
 
 
 primers_blast_setup:
