--- a/tutorials/configs/padlock_probe_designer_custom.yaml
+++ b/tutorials/configs/padlock_probe_designer_custom.yaml
@@ -1,6 +1,6 @@
 ### General parameters
 n_jobs: 1 # number of cores used to run the pipeline
-dir_output: output # name of the directory where the output files will be written
+dir_output: output_tutorial # name of the directory where the output files will be written
 min_oligos_per_gene: 0 # minimum number of oligos that a gene must have before it gets deleted
 write_removed_genes: True # write in a file the removed genes
 write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
