--- a/data/configs/seqfish_plus_probe_designer.yaml
+++ b/data/configs/seqfish_plus_probe_designer.yaml
@@ -1,108 +1,221 @@
-########################
-### BASIC PARAMETERS ###
-########################
+#######################
+### USER PARAMETERS ###
+#######################
 
 ### General parameters
-n_jobs: 2 # number of cores used to run the pipeline
-dir_output: output_seqfish_plus_probe_designer # name of the directory where the output files will be written
-write_intermediate_steps: true # writes the oligo sequences after each step of the pipeline
-min_oligos_per_gene: 24 # minimum number of oligos that a gene must have before it gets deleted
-
+### -----------------------------------------------
+n_jobs: 4 # number of cores used to run the pipeline and 2*n_jobs +1 of regions that should be stored in cache. If memory consumption of pipeline is too high reduce this number, if a lot of RAM is available increase this number to decrease runtime
+dir_output: output_seqfishplus_probe_designer # name of the directory where the output files will be written
+write_intermediate_steps: true # if true, writes the oligo sequences after each step of the pipeline into a csv file
 
 ### Parameters for probe sequences generation
-file_regions: data/genes/custom_2.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
-files_fasta_probe_database: # fasta file with sequences form which the oligos should be generated. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+### -----------------------------------------------
+## target probe sequence
+file_regions: data/genes/custom_3.txt # file with a list the genes used to generate the probe sequences, leave empty if all the genes are used
+#TODO: adapt files
+files_fasta_probe_database: # fasta file with sequences form which the probes should be generated. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
   - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
   - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
-probe_length_min: 26 #min length of oligos
-probe_length_max: 30 #max length of oligos
+probe_length_min: 28 #min length of probe
+probe_length_max: 28 #max length of probe
+## readout probe sequence
+readout_probe_length: 15 # length of readout probes
+readout_probe_base_probabilities: # probabilities of each base for random readout probe sequence generation
+  A: 0.25
+  C: 0.25
+  G: 0.25
+  T: 0.25
+## primer
+forward_primer_length: 20 # length of forward primer
+forward_primer_base_probabilities: # probabilities of each base for random primer sequence generation
+  A: 0.25
+  C: 0.25
+  G: 0.25
+  T: 0.25
+reverse_primer_sequence: CCCTATAGTGAGTCGTATTA # reverse complement of 20 nt T7 promoter sequence
 
-
-### Parameters for the property filers
-# oligo sequence
-GC_content_min: 45 # minimum GC content of oligos
-GC_content_max: 65 # maximum GC content of oligos
-number_consecutive: 5 # min number of not allowed consecutive nucleotides
-
+### Parameters for the sequence property filers
+### -----------------------------------------------
+## target probe sequence
+probe_GC_content_min: 45 # minimum GC content of oligos
+probe_GC_content_max: 65 # maximum GC content of oligos
+probe_homopolymeric_base_n: # minimum number of nucleotides to consider it a homopolymeric run per base
+  A: 5
+  T: 5
+  C: 5
+  G: 5
+probe_T_secondary_structure: 76 # Temperature at which the free energy is calculated
+probe_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy
+## readout probe sequence
+readout_probe_GC_content_min: 40 # minimum GC content of oligos
+readout_probe_GC_content_max: 60 # maximum GC content of oligos
+readout_probe_homopolymeric_base_n: # minimum number of nucleotides to consider it a homopolymeric run per base
+  G: 3
+## primer sequence
+primer_GC_content_min: 50 # minimum GC content of oligos
+primer_GC_content_max: 65 # maximum GC content of oligos
+primer_number_GC_GCclamp: 1
+primer_number_three_prime_base_GCclamp: 2
+primer_max_len_selfcomplement: 6
+primer_max_len_complement_reverse_primer: 5
+primer_Tm_min: 60
+primer_Tm_max: 65
+primer_homopolymeric_base_n: # minimum number of nucleotides to consider it a homopolymeric run per base
+  A: 3
+  T: 3
+  C: 3
+  G: 3
+primer_T_secondary_structure: 76 # Temperature at which the free energy is calculated
+primer_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy
 
 ### Parameters for the specificity filters
-# Bowtie Ligation Region filter
-ligation_region_size: 5 #coverage between oligos and target sequence should not span region around ligation site (e.g. ligation_region = 5 would correspond to -4 to +5 nt around ligation site), if ligation_region = 0, omit this requirement
+### -----------------------------------------------
+## target probe sequence
+#TODO: adapt files
+probe_files_fasta_reference_database: # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+  - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+  - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+## readout probe sequence
+readout_probe_files_fasta_reference_database: # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+  - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+  - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+## forward primer sequence
+forward_primer_files_fasta_reference_database: # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+  - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+  - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
 
-# Blastn Similarity Filter
-word_size: 10 #word size for the blastn x (exact match to target)
-coverage: 50 #minimum coverage between oligos and target sequence, ranging from 0 to 100% (full coverage)
-percent_identity: 80 #maximum similarity between oligos and target sequences, ranging from 0 to 100% (no missmatch)
-strand: plus # strand of the query sequence to search
+### Parameters for set selection
+### -----------------------------------------------
+probe_GC_content_opt: 55 # max and min values are defiend above
+probe_GC_weight: 1 # weight of the GC content of the probe in the efficiency score
+probe_UTR_weight: 10 # weight of the Tm of the probe in the efficiency score
+probeset_size_min: 24 # minimum size of probe sets (in case there exist no set of the optimal size) -> genes with less oligos will be filtered out and stored in regions_with_insufficient_oligos_for_db_probes
+probeset_size_opt: 24 # optimal size of probe sets
+distance_between_probes: 2 # how much overlap should be allowed between oligos, e.g. if oligos can overlpap x bases choose -x, if oligos can be next to one another choose 0, if oligos should be x bases apart choose x
+n_sets: 100 # maximum number of sets to generate
 
-### Parameters for the oligo efficiency
-# Here also Tm_min, Tm_max, GC_content_min, GC_content_max are used, but have been defined before
-Tm_opt: 60 #60 #optimal melting temperature of oligos
-GC_content_opt: 55 #optimal GC content of oligos
-Tm_weight: 1 # weight of the Tm of the oligo in the efficiency score
-GC_weight: 1 # weight of the GC content of the oligo in the efficiency score
+### Parameters for final sequence design
+### -----------------------------------------------
+channels_ids: # names of fluorescent channels
+  - Alexa488
+  - Cy3b 
+  - Alexa647
+n_barcode_rounds: 4 # number of barcoding rounds
+n_pseudocolors: 20 # number of pseudocolors
+top_n_sets: 3 #maximum number of sets to report in padlock_probes.yaml and "padlock_probes_order.yaml"
 
+############################
+### DEVELOPER PARAMETERS ###
+############################
 
-### Parameters for the oligosets generation
-oligoset_size: 5 #ideal number of oligos per oligoset
-min_oligoset_size: 2 #minimum number of oligos per oligoset
-n_sets: 100 # maximum number of sets per gene
+### Parameters for random sequence generation
+### -----------------------------------------------
+readout_probe_initial_num_sequences: 100000 # if not enough readout probes can be generated, increase this number
+forward_primer_initial_num_sequences: 1000000 # if no primer can be generated, increase this number
 
+### Parameters for the specificity filters
+### -----------------------------------------------
+## target probe sequence
+# Specificity filter with BlastN
+probe_specificity_blastn_search_params:
+  perc_identity: 100
+  strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
+  word_size: 7
+  dust: "no"
+  soft_masking: "false"
+  max_target_seqs: 10
+  max_hsps: 1000
+probe_specificity_blastn_hit_params:
+  min_alignment_length: 15 # can be turned into coverage
 
-### Parameters for the padlock detection oligo design
-detect_oligo_length_min: 18 # min length of detection oligo
-detect_oligo_length_max: 25 # max length of detection oligo
-detect_oligo_Tm_opt: 32 # optimal melting temperature of detection oligo
+# Crosshybridization filter with BlastN
+probe_cross_hybridization_blastn_search_params:
+  perc_identity: 80
+  strand: "minus" # this parameter is fixed
+  word_size: 7
+  dust: "no"
+  soft_masking: "false"
+  max_target_seqs: 10
+probe_cross_hybridization_blastn_hit_params:
+  min_alignment_length: 17 # can be turned into coverage
 
+## readout probe sequence
+# Specificity filter with BlastN
+readout_probe_specificity_blastn_search_params:
+  perc_identity: 100
+  strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
+  word_size: 7
+  dust: "no"
+  soft_masking: "false"
+  max_target_seqs: 10
+  max_hsps: 1000
+readout_probe_specificity_blastn_hit_params:
+  min_alignment_length: 10 # can be turned into coverage
 
-### Parameters for readout probes design
-num_pseudocolors: 60 # number of pseudocolors
-length_readout: 15 # length of readout probe
-GC_min_readout: 45 # min GC content
-GC_max_readout: 55 # max GC content
-number_consecutive_readout: 5 # min number of not allowed consecutive nucleotides
+# Crosshybridization filter with BlastN
+readout_probe_cross_hybridization_blastn_search_params:
+  perc_identity: 100
+  strand: "minus" # this parameter is fixed
+  word_size: 7
+  dust: "no"
+  soft_masking: "false"
+  max_target_seqs: 10
+readout_probe_cross_hybridization_blastn_hit_params:
+  min_alignment_length: 10 # can be turned into coverage
 
-###########################
-### Advanced PARAMETERS ###
-###########################
+##forward primer sequence
+# Specificity filter with BlastN against reference
+forward_primer_specificity_refrence_blastn_search_params:
+  perc_identity: 100
+  strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
+  word_size: 7
+  dust: "no"
+  soft_masking: "false"
+  max_target_seqs: 10
+  max_hsps: 1000
+forward_primer_specificity_refrence_blastn_hit_params:
+  min_alignment_length: 14 # can be turned into coverage
+
+# Specificity filter with BlastN against encoding rpobes
+forward_primer_specificity_encoding_probes_blastn_search_parameters:
+  perc_identity: 100
+  strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
+  word_size: 7
+  dust: "no"
+  soft_masking: "false"
+  max_target_seqs: 10
+  max_hsps: 1000
+forward_primer_specificity_encoding_probes_blastn_hit_parameters:
+  min_alignment_length: 11 # can be turned into coverage
+
+### Parameters for the Oligo set selection
+### -----------------------------------------------
+max_graph_size: 5000 # maximum number of oligos that are taken into consisderation in the last step (5000 -> ~5GB, 2500 -> ~1GB)
 
 ### Parameters for Melting Temperature
-# The melting temperature is used in 2 different stages (property filters and padlock detection oligo design), where a few parameters are shared and the others differ.
+### -----------------------------------------------
+# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
 # parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
-Tm_parameters:
-    shared:
-        check: True
-        strict: True
-        c_seq: null
-        shift: 0
-        nn_table: DNA_NN3
-        tmm_table: DNA_TMM1
-        imm_table: DNA_IMM1
-        de_table: DNA_DE1
-        dnac1: 50 #[nM]
-        dnac2: 0
-        selfcomp: False
-        dNTPs: 0
-        saltcorr: 7
-    property_filter:
-        Na: 1.25 #[mM]
-        K: 75 #[mM]
-        Tris: 20 #[mM]
-        Mg: 10 #[mM]
-    detection_oligo:
-        Na: 39 #[mM]
-        K: 0 #[mM]
-        Tris: 0 #[mM]
-        Mg: 0 #[mM]
+## primer
+Tm_parameters_primer:
+    check: true #default
+    strict: true #default
+    c_seq: null #default
+    shift: 0 #default
+    nn_table: DNA_NN4 #S antaLucia (2004) taken from Moffitt (2016)
+    tmm_table: DNA_TMM1 #default
+    imm_table: DNA_IMM1 #default
+    de_table: DNA_DE1 #default
+    dnac1: 500 #[nM] taken from https://github.com/ZhuangLab/MERFISH_analysis
+    dnac2: 25 #[nM] default
+    selfcomp: false #default
+    saltcorr: 5 # correction for deltaS, taken from https://github.com/ZhuangLab/MERFISH_analysis
+    Na: 300 #[mM] 0.3M, taken from https://github.com/ZhuangLab/MERFISH_analysis
+    K: 0 #[mM] default
+    Tris: 0 #[mM] default
+    Mg: 0 #[mM] default
+    dNTPs: 0 #[mM] default
 
-Tm_correction_parameters:
-    shared:
-        DMSO: 0
-        DMSOfactor: 0.75
-        fmdfactor: 0.65
-        fmdmethod: 1
-        GC: null
-    property_filter:
-        fmd: 20
-    detection_oligo:
-        fmd: 30
+Tm_chem_correction_param_primer: null # if chem correction desired, please add parameters below
+
+Tm_salt_correction_param_primer: null # if salt correction desired, please add parameters below
